[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/game/player/inventory/inv_slot.gd" type="Script" id=1]
[ext_resource path="res://assets/tile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="inv_slot" type="Node2D" groups=["slot"]]
script = ExtResource( 1 )

[node name="btn" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
shape_centered = false

[node name="back" type="Sprite" parent="btn"]
self_modulate = Color( 0.247059, 0.862745, 0.984314, 0.447059 )
scale = Vector2( 2.6, 2.6 )
texture = ExtResource( 2 )

[node name="uses" type="Label" parent="btn"]
margin_left = -40.0
margin_top = 26.0
margin_right = -17.0
margin_bottom = 40.0
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="btn"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.4, 0.4 )
z_index = 1

[node name="grade" type="Sprite" parent="btn"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
[connection signal="released" from="btn" to="." method="_on_btn_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
